--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "28.1.0",
+    "jest": "^28.1.3",
     "jest-environment-jsdom": "28.1.0",
     "typescript": "^5"
   }
