--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
         run: npm run lint
 
       - name: Test
-        id: npm-dev
-        run: npm run dev
+        id: npm-test
+        run: npm test
 
   test-action:
     name: GitHub Actions Test
@@ -47,8 +47,8 @@ jobs:
       - name: Test Local Action
         id: test-action
         uses: ./
-        with:
-          milliseconds: 1000
+        # with:
+        #   milliseconds: 1000
 
       - name: Print Output
         id: output
