add check format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
           node-version: 20.9.0
           cache: npm
 
+      - name: Check Format
+        id: npm-format-check
+        run: npm run format:check
+
       - name: Install Dependencies
         id: npm-ci
         run: npm ci
