--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "next lint --fix",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "format:check": "prettier --check **/*.ts"
   },
   "dependencies": {
     "axios": "^0.27.2",
