--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "28.1.0",
-    "typescript": "^5",
     "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2"
+    "prettier-eslint": "^16.1.2",
+    "typescript": "^5"
   }
 }
